gallrey fix on mobile,

--- a/frontend/src/scss/components/_imagescroll.scss
+++ b/frontend/src/scss/components/_imagescroll.scss
@@ -31,13 +31,12 @@
     }
 
     &__legend {
-        @extend .text__paragraph;
-        text-align: center;
-
         &--wrapper {
+            display: inline-block;
             display: flex;
             justify-content: space-between;
             padding-top: $margin-xsmall;
+            width: 210px;
         }
     }
 
@@ -60,7 +59,7 @@
 
 
         @include respond-to(small) {
-            height: 100%;
+            height: 80vh;
             margin-right: $margin-medium;
         }
     }
